--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,52 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
+
+    <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="%PUBLIC_URL%/css/kincstar.css"      rel="stylesheet" type="text/css" />
+    <link href="%PUBLIC_URL%/css/pell.css"          rel="stylesheet" type="text/css" />
+    <link href="%PUBLIC_URL%/css/loading.css"       rel="stylesheet" type="text/css" />
+    <link href="%PUBLIC_URL%/css/roboto.css"        rel="stylesheet" type="text/css" />
+    <link href="%PUBLIC_URL%/css/dhtmlxgrid.css"    rel="stylesheet" type="text/css" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Egészségbiztosítás Pénzbeli Ellátás</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
   </head>
-  <body>
+  <body class="ready" style="background:#efefef">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="mainbox jumbotron jumbotron-fluid bg-primary text-black col-md-12">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card-group logorow">
+                        <div class="card">
+                          <div class="card-block">
+                            <a href="http://www.allamkincstar.gov.hu"><img class="card-img-top logo-image" src="%PUBLIC_URL%/images/logo.png" /></a>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-block">
+                            <div class="card-title sitename text-center"><a href="/">Pénzbeli Ellátások</a></div>
+                          </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-block">
+                                <div class="card-title">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <header class="hr"></header>
+
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
