--- a/redirect/pell-tst/index.html
+++ b/redirect/pell-tst/index.html
@@ -5,15 +5,16 @@
     <script>
         if (window.parent.frames.length > 0) window.parent.location = this.location;
     </script>
-    <TITLE>P√©nzbeli ell√°t√°sok</TITLE>
+    <TITLE>PÈnzbeli ell·t·sok</TITLE>
 </HEAD>
 
+<frameset rows='*' FRAMEBORDER=NO FRAMESPACING=0 BORDER=0>
+    <frame name="main"
+        src="/SASStoredProcess/do?_program=%2FPELL%2FStored+Processes%2FP%C3%A9nzbeli+ell%C3%A1t%C3%A1sok&target=pell-react-tst"
+        scrolling=yes marginwidth=0>
+</frameset>
+
 <BODY BGCOLOR="#FFFFFF">
-    <frameset rows='*' FRAMEBORDER=NO FRAMESPACING=0 BORDER=0>
-        <frame name="main"
-            src="/SASStoredProcess/do?_program=%2FPELL%2FStored+Processes%2FP%C3%A9nzbeli+ell%C3%A1t%C3%A1sok&target=pell-react-tst"
-            scrolling=yes marginwidth=0>
-    </frameset>
 </BODY>
 
 </HTML>
